commit tree 74dea9648203df3aae8ec297b85a94594cf6a022

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,28 @@
-
+<h1>Display your Team here</h1>
+    <div class="team">
+        <h3>Name: <%= @team.name %></h3><br>
+        <h4>Team Motto: <%= @team.motto %></h4><br>
+    </div><br>
+<h2>Display your first hero here</h2>
+  
+        <div class="hero">
+        <p>Hero Name: <%=@heros[0].name %></p><br>
+        <p>Hero Power: <%=@heros[0].power %></p><br>
+        <p>Hero Biography: <%=@heros[0].bio %></p><br>
+        </div><br>
+        
+<h2>Display your second hero here</h2>
+    <div class="hero">
+    <p>Hero Name: <%=@heros[1].name %></p><br>
+    <p>Hero Power: <%=@heros[1].power %></p><br>
+    <p>Hero Biography: <%=@heros[1].bio %></p><br>
+    </div><br> 
+    
+    <h2>Display your third hero here</h2>
+    <div class="hero">
+    <p>Hero Name: <%=@heros[2].name %></p><br>
+    <p>Hero Power: <%=@heros[2].power %></p><br>
+    <p>Hero Biography: <%=@heros[2].bio %></p><br>
+    </div><br>  
 
 
